# learnopengl

./: .gitignore  CMakeLists.txt  README.md  opengltut  run.sh
gettingStarted/: CMakeLists.txt
gettingStarted/src/code/: camera.cpp  renderer.cpp
gettingStarted/src/headers/: renderer.h
gettingStarted/src/shaders/: lighting.vert  triangle.vert
src/: main.cpp  renderer.cpp  utils.cpp
src/code/: camera.cpp  materials.cpp  renderer.cpp  shader.cpp  utils.cpp
src/headers/: camera.h  camera2.h  camera_log.h  materials.h  renderer.h  shader.h  utils.h
src/shaders/: light.frag  light.vert  lightSource.frag  lightSource.vert  lighting.frag  lighting.vert
